apps/headroom/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headroom
  labels:
    app: headroom
    app.kubernetes.io/name: headroom
spec:
  selector:
    app: headroom
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
